--- a/boring-lecture.html
+++ b/boring-lecture.html
@@ -7,22 +7,23 @@
   <body>
     <img src="img/irs.jpeg" alt="Picture of IRS Building" class="intro">
     <h1 class="intro">The IRS is out to Get you!</h1>
-    <p class="intro">And here is the full version. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-    in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident</p>
-    <p class="intro">And here is the full version. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-    in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident</p>
-    <p class="intro">And here is the full version. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-    in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident</p>
-
+    <div class="intro">
+      <p>And here is the full version. Ut <span class="italic">enim</span> ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident</p>
+      <p>And here is the full version. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip
+      ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+      in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident</p>
+      <p>And here is the full version. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip
+      ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+      in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident</p>
+    </div>
     <h2 class="intro">Thing to bring to an Audit</h2>
       <ol>
         <li>I.D Card</li>
